--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:            Site Title
-description:      Describe your website here.
+title:            Mind Case
+description:      思维的包装盒.
 disqus_shortname: 
 reading_time:     true
 words_per_minute: 200
@@ -9,7 +9,7 @@ url:
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Balian
   avatar:         avatar.jpg
   bio:            "Your bio goes here. It shouldn't be super long but a good sentence or two should suffice."
   email:          you@email.com
